--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,7 @@
     {% endif %}
     {% endif %}
 
-<form method="post" action="{% url 'users:login' %}">
+<form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     <table>
         <tr>
