--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -1,13 +1,67 @@
-<ul class="sidebar-nav">
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-    {% if user.is_authenticated %}
-    <li>User : {{user.get_username}}</li>
-    <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-    
-    {% else %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main Page</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"
+        integrity="sha512-L4lHq2JI/GoKsERT8KYa72iCwfSrKYWEyaBxzJeeITM9Lub5vlTj8tufqYk056exhjo2QDEipJrg6zen/DDtoQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'js/javascript.js' %}" defer></script>
+    {% block title %}
+    {% endblock title %}
+</head>
+
+<body>
+    <!-- Navbar starts Here -->
+    <nav>
+        <a href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
+        <button type="button">
+            <span></span>
+        </button>
+        <div>
+            <ul>
+                <li>
+                    <a href="{% url 'main_page:mainPageView' %}">Home <span>(current)</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'main_page:aboutPageView' %}">About <span>(current)</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'main_page:contactPageView' %}">Contact <span>(current)</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    {% block content %}
+
+
+    <ul class="sidebar-nav">
+
+        {% if user.is_authenticated %}
+        <li>User : {{user.get_username}}</li>
+        <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+
+        {% else %}
         <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-    
-    {% endif %}
 
-</ul>
+        {% endif %}
 
+    </ul>
+
+    {% endblock content %}
+
+</body>
+
+</html>
