20230313 2223 Added base.html extend link to all pages

--- a/templates/main_page/about.html
+++ b/templates/main_page/about.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
-    <H1>ABOUT PAGE</H1>
-</body>
-</html>
+{% extends 'base/base.html' %}
+
+{% block title %}
+<title>About Page</title>
+{% endblock title %}
+
+{% block content %} 
+
+<h1>About Page</h1>
+
+{% endblock content %}
