--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,4 +1,10 @@
 
+{% extends 'base/base.html' %}
+
+{% block title %}
+<title>Log out Page</title>
+{% endblock title %}
+
 
 {% block content %}
   <p>Logged out!</p>
