--- a/templates/main_page/contact.html
+++ b/templates/main_page/contact.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
-    <h1>CONTACT PAGE</h1>
-</body>
-</html>
+{% extends 'base/base.html' %}
+
+{% block title %}
+<title>Contact Page</title>
+{% endblock title %}
+
+
+{% block content %} 
+
+<h1>Contact Page</h1>
+
+{% endblock content %}
