--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,4 +1,8 @@
+{% extends 'base/base.html' %}
 
+{% block title %}
+<title>Password Reset Complete</title>
+{% endblock title %}
 
 {% block content %}
   <h1>The password has been changed!</h1>
