--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,4 +1,8 @@
+{% extends 'base/base.html' %}
 
+{% block title %}
+<title>Password Reset Confirm</title>
+{% endblock title %}
 
 {% block content %}
     {% if validlink %}
