--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,4 +1,8 @@
+{% extends 'base/base.html' %}
 
+{% block title %}
+<title>Password Reset Done</title>
+{% endblock title %}
 
 {% block content %}
   <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
