--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,11 @@
+{% extends 'base/base.html' %}
+
+{% block title %}
+<title>Password Reset Email</title>
+{% endblock title %}
+
+
+{% block content %}
 Someone asked for password reset for email {{ email }}. Follow the link below:
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{% endblock %}
