--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,11 @@
 
+{% extends 'base/base.html' %}
+
+{% block title %}
+<title>Password Reset Form</title>
+{% endblock title %}
+
+
 {% block content %}
   <form action="" method="post">
   {% csrf_token %}
