--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -9,8 +9,8 @@
     {% block title %}
     {% endblock title %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"
         integrity="sha512-L4lHq2JI/GoKsERT8KYa72iCwfSrKYWEyaBxzJeeITM9Lub5vlTj8tufqYk056exhjo2QDEipJrg6zen/DDtoQ=="
@@ -20,93 +20,170 @@
 
 <body>
     <!-- Navbar starts Here -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color:#e3f2fd;">
+    <!-- <nav class="navbar  bg-body-tertiary" style="background-color:#e3f2fd;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                    <div>
-                        <li>
-                            <a href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
-                        </li>
-                    </div>
+            <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
+            <div class="collapse navbar-collapse" >
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class = "nav-link active" href="{% url 'main_page:mainPageView' %}">Home <span>(current)</span>
+                        <a class="nav-link active"  href="{% url 'main_page:mainPageView' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">About <span>(current)</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="{% url 'main_page:aboutPageView' %}">About <span>(current)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'main_page:contactPageView' %}">Contact <span>(current)</span>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">Contact <span>(current)</span>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-tog>Products</a>
-                        <ul class="dropdown-content">
+                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                            data-bs-toggle="dropdown">Products</a>
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Link 1</a></li>
                             <li><a class="dropdown-item" href="#">Link 2</a></li>
-                            <li><a class="dorpdown-item" href="#">Link 3</a></li>
+
+                            <li><a class="dropdown-item" href="#">Link 3</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
 
                     {% if user.is_authenticated and user.is_superuser %}
 
-
-                    <li>User : {{user.get_username}}</li>
-                    <li>
-                        <a href="{% url 'admin:index' %}">Admin</a>
+                    <li class="nav-item">User : {{user.get_username}}</li>
+                    <li class="nav-item">
+                        <a class="nav-link active"  href="{% url 'admin:index' %}">Admin</a>
                         <div>
-                            <a href="#">Action</a>
-                            <a href="{% url 'users:userProfile' %}">UserProfile</a>
-                            <a href="#">Another Action</a>
+                            <a class="nav-link active"  href="#">Action</a>
+                            <a class="nav-link active"  href="{% url 'users:userProfile' %}">UserProfile</a>
+                            <a class="nav-link active"  href="#">Another Action</a>
                             <div>
-                                <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
+                                <a class="nav-link active"  href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
                             </div>
                         </div>
                     </li>
-
 
                     {% elif user.is_authenticated %}
 
-
-                    <li>User : {{user.get_username}}</li>
-                    <li>
+                    <li class="nav-item">User : {{user.get_username}}</li>
+                    <li class="nav-item">
                         <div>
-                            <a href="#">Action</a>
-                            <a href="{% url 'users:userProfile' %}">UserProfile</a>
-                            <a href="#">Another Action</a>
+                            <a class="nav-link active"  href="#">Action</a>
+                            <a class="nav-link active" href="{% url 'users:userProfile' %}">UserProfile</a>
+                            <a class="nav-link active"  href="#">Another Action</a>
                             <div>
-                                <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
+                                <a class="nav-link active"  href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
                             </div>
                         </div>
                     </li>
 
-
                     {% else %}
 
-                    <li>
-                        <a href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                    <li class="nav-item">
+                        <a class="nav-link active"  href="{% url 'login' %}?next={{ request.path }}">Login</a>
                     </li>
 
-                    <li>
-                        <a href="{% url 'users:userRegistration' %}">Register</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'users:userRegistration' %}">Register</a>
                     </li>
 
                     {% endif %}
                     <li style="float:right">
-                        <form class="d-flex" action="#" method='GET'>
-                            <input class="form-control me-2" type="search" name="q" placeholder="Search" value="{{request.GET.q}}">
+                        <form class="d-flex" action="#" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </li>
                 </ul>
             </div>
         </div>
-
-    </nav>
+    </nav> -->
 
     <!-- Navbar Ends  -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Products
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Link1</a></li>
+                  <li><a class="dropdown-item" href="#">Link2</a></li>
+                  <li><a class="dropdown-item" href="#">Link2</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+
+              {% if user.is_authenticated and user.is_superuser %}
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    User : {{user.get_username}}
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
+                  <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+                </ul>
+              </li>
+      
+
+              {% elif user.is_authenticated %}
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    User : {{user.get_username}}
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+                </ul>
+              </li>
+
+              {% else %}
+
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'login' %}?next={{ request.path }}">LOGIN</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'users:userRegistration' %}">Register</a>
+              </li>
+
+              {% endif %}
+      
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">Contact</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+
 
     {% block content %}
     {% endblock content %}
