20230315 2336 Updated NavBar and Footer with test images

--- a/templates/users/userProfile.html
+++ b/templates/users/userProfile.html
@@ -1,6 +1,14 @@
-
+{% extends 'base/base.html' %}
 
 {% block title %}
-<h1>User Profile Info</h1>
+<title>User Profile Info</title>
 {% endblock title %}
+
+{% block content %} 
+
+<h1>User Profile Info</h1>
+
+{% endblock content %}
+
+
 
