--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,24 +3,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}
-    {% endblock title %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"
-        integrity="sha512-L4lHq2JI/GoKsERT8KYa72iCwfSrKYWEyaBxzJeeITM9Lub5vlTj8tufqYk056exhjo2QDEipJrg6zen/DDtoQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="{% static 'js/javascript.js' %}" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% block title %}
+  {% endblock title %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"
+    integrity="sha512-L4lHq2JI/GoKsERT8KYa72iCwfSrKYWEyaBxzJeeITM9Lub5vlTj8tufqYk056exhjo2QDEipJrg6zen/DDtoQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="{% static 'js/javascript.js' %}" defer></script>
 </head>
 
 <body>
-    <!-- Navbar starts Here -->
-    <!-- <nav class="navbar  bg-body-tertiary" style="background-color:#e3f2fd;">
+  <!-- Navbar starts Here -->
+  <!-- <nav class="navbar  bg-body-tertiary" style="background-color:#e3f2fd;">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
             <div class="collapse navbar-collapse" >
@@ -102,91 +105,147 @@
         </div>
     </nav> -->
 
-    <!-- Navbar Ends  -->
+  <!-- Navbar Ends  -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">Home</a>
+  <nav class="navbar navbar-light sticky-top navbar-expand-lg" style="background-color: #AFC5F0">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'main_page:mainPageView' %}">Hand Twist Jewelry</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'main_page:mainPageView' %}">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Products
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Link1</a></li>
+              <li><a class="dropdown-item" href="#">Link2</a></li>
+              <li><a class="dropdown-item" href="#">Link2</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Products
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Link1</a></li>
-                  <li><a class="dropdown-item" href="#">Link2</a></li>
-                  <li><a class="dropdown-item" href="#">Link2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-
-              {% if user.is_authenticated and user.is_superuser %}
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    User : {{user.get_username}}
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
-                  <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
-                </ul>
-              </li>
-      
-
-              {% elif user.is_authenticated %}
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    User : {{user.get_username}}
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
-                </ul>
-              </li>
-
-              {% else %}
-
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'login' %}?next={{ request.path }}">LOGIN</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'users:userRegistration' %}">Register</a>
-              </li>
-
-              {% endif %}
-      
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">Contact</a>
-              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+          </li>
+
+          {% if user.is_authenticated and user.is_superuser %}
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User : {{user.get_username}}
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
+              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+            </ul>
+          </li>
+
+
+          {% elif user.is_authenticated %}
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User : {{user.get_username}}
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'users:userProfile' %}">User Profile</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}?next={{ request.path }}">LOGOUT</a></li>
+            </ul>
+          </li>
+
+          {% else %}
+
+          <li class="nav-item">
+            <a class="nav-link active" href="{% url 'login' %}?next={{ request.path }}">LOGIN</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="{% url 'users:userRegistration' %}">Register</a>
+          </li>
+
+          {% endif %}
+
+          <li class="nav-item">
+            <a class="nav-link active" href="{% url 'main_page:aboutPageView' %}">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="{% url 'main_page:contactPageView' %}">Contact</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+
+
+  {% block content %}
+  {% endblock content %}
+
+  <footer class="footer fixed-bottom pb-6 pt-4 pt-md-12" style="background-color: #677BA3">
+    <div class="container">
+      <div class="row-align-items-center">
+        <div class="col-8 col-md-12 col-lg-4">
+          <a href="#">
+            <img src="" alt="">
+          </a>
         </div>
-      </nav>
+        <div class="col-4 col-md-12 col-lg-8 text-end">
+          <ul class="list-inline text-md-end mb-0 small">  
+            <li class="list-inline-item me-2">
+              <a class="social-links" href="#!">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row g-4">
+        <div class="col-12 col-md-12 col-lg-4">
+          <h6 class="mb-4 text-white">Categories</h6>
+          <div class="row"></div>
+          <div class="col-6">
+            <!-- list -->
+            <ul class="nav flex-colum">
+              <li class="nav-item mb-2">
+                  <a class="nav-link" href="#!">Contact</a>
+              </li>
+              <li class="nav-item mb-2">
+                <a class="nav-link" href="#!">About</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a class="nav-link" href="#!">LINK1</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a class="nav-link" href="#!">LINK2</a>
+        </li>
+            </ul>
+          </div>
 
+        </div>
 
-
-    {% block content %}
-    {% endblock content %}
+      </div>
+    </div>
+  </footer>
 
 </body>
 
