--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -1,11 +1,82 @@
+
+
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block title %}
 <title>Main Page</title>
 {% endblock title %}
 
-{% block content %} 
+{% block content %}
 
 <h1>MAIN PAGE</h1>
+<!-- BEGIN Carousel picture scroll/page -->
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="d-block w-10" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="d-block w-10" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="d-block w-10" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<!-- END Carousel picture scroll/page -->
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col" style="background-color: red">col</div>
+        <div class="col" style="background-color: rgb(134, 69, 69)">col</div>
+        <div class="col" style="background-color: rgb(0, 255, 255)">col</div>
+        <div class="col" style="background-color: rgb(0, 102, 255)">col</div>
+    </div>
+    <div class="row">
+        <div class="col-8" style="background-color: rgb(0, 255, 13)">col-8</div>
+        <div class="col-4" style="background-color: rgb(255, 217, 0)">col-4</div>
+    </div>
+    <div class="row">
+        <div class="col" style="background-color: rgb(0, 255, 13)">Word Panel</div>
+    </div>
+    <div class="row">
+        <div class="col" style="background-color: red">Pic</div>
+        <div class="col" style="background-color: rgb(134, 69, 69)">Pic</div>
+        <div class="col" style="background-color: rgb(0, 255, 255)">Pic</div>
+        <div class="col" style="background-color: rgb(0, 102, 255)">Pic</div>
+      </div>
+    <div class="row">
+        <div class="col-8" style="background-color: rgb(0, 255, 13)">col-8 Instagram Panel</div>
+        <div class="col-4" style="background-color: rgb(255, 217, 0)">col-4 Instagram Panel</div>
+    </div>
+</div>
+
+
 
 {% endblock content %}
