--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'base/base.html' %}
 {% load static %}
 
@@ -9,73 +7,162 @@
 
 {% block content %}
 
-<h1>MAIN PAGE</h1>
+
 <!-- BEGIN Carousel picture scroll/page -->
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="d-block w-10" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+        <div class="carousel-item active" style="height: 350px; width:100%">
+            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
+                alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="d-block w-10" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+        <div class="carousel-item" style="height: 350px; width:100%">
+            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="d-block w-10" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+        <div class="carousel-item" style="height: 350px; width:100%">
+            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 " alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+            </div>
         </div>
-      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
     </button>
-  </div>
+</div>
 <!-- END Carousel picture scroll/page -->
+
+<!-- BEGIN Clickable PIC Links -->
+<section>
+    <div class="card-group">
+        <div class="card h-200">
+            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">New Arrivals</h5>
+                <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card h-200">
+            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Best Sellers</h5>
+                <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card h-200">
+            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Full Collection</h5>
+                <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- END Clickable PIC Links -->
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col" style="background-color: red">col</div>
-        <div class="col" style="background-color: rgb(134, 69, 69)">col</div>
-        <div class="col" style="background-color: rgb(0, 255, 255)">col</div>
-        <div class="col" style="background-color: rgb(0, 102, 255)">col</div>
-    </div>
-    <div class="row">
-        <div class="col-8" style="background-color: rgb(0, 255, 13)">col-8</div>
-        <div class="col-4" style="background-color: rgb(255, 217, 0)">col-4</div>
-    </div>
-    <div class="row">
         <div class="col" style="background-color: rgb(0, 255, 13)">Word Panel</div>
     </div>
+</div>
+
+<!-- BEGIN PRODUCT SELECTION OPTIONS -->
+<h3>OUR PRODUCTS</h3>
+
+<div class="container">
     <div class="row">
-        <div class="col" style="background-color: red">Pic</div>
-        <div class="col" style="background-color: rgb(134, 69, 69)">Pic</div>
-        <div class="col" style="background-color: rgb(0, 255, 255)">Pic</div>
-        <div class="col" style="background-color: rgb(0, 102, 255)">Pic</div>
-      </div>
-    <div class="row">
-        <div class="col-8" style="background-color: rgb(0, 255, 13)">col-8 Instagram Panel</div>
-        <div class="col-4" style="background-color: rgb(255, 217, 0)">col-4 Instagram Panel</div>
+        <div class="card-group">
+            <div class="col">
+                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                    <img src="{% static 'imgs/test_imgs/Test_IMG007.png' %}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">PICTURE LINK </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                    <img src="{% static 'imgs/test_imgs/Test_IMG008.png' %}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">PICTURE LINK </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                    <img src="{% static 'imgs/test_imgs/Test_IMG009.png' %}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">PICTURE LINK </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                    <img src="{% static 'imgs/test_imgs/Test_IMG010.png' %}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">PICTURE LINK </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                    <img src="{% static 'imgs/test_imgs/Test_IMG011.png' %}" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">PICTURE LINK </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
+
+<!-- END PRODUCT SELECTION OPTIONS -->
+
+
+<!-- BEGIN INSTAGRAM PANEL -->
+
+<div class="row">
+    <div class="col" style="background-color: rgb(0, 255, 13)">Real Time photo Feed Framework using Django</div>
+    
+</div>
+
+
+ <!-- END INSTAGRAM PANEL -->
 
 
 
