20230317 2343 Working uploading product page images and fixed links breaks

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,6 +3,7 @@
 {% load socialaccount %}
 
 
+
 <html lang="en">
 
 <head>
@@ -44,7 +45,7 @@
               Products
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Link1</a></li>
+              <li><a class="dropdown-item" href="{% url 'products:productIndexPage1' %}">Product Page1</a></li>
               <li><a class="dropdown-item" href="#">Link2</a></li>
               <li><a class="dropdown-item" href="#">Link2</a></li>
               <li>
