--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,111 +1,25 @@
-.instagram-image{
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: 0.5s ease;
-    backface-visibility:hidden;
+.carousel-item {
+    height: 50vh;
+  }
+.card {
+box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.instagram-image-middle{
-    transition: 0.5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%,-50%)
+.footer-cta {
+box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
+}
+.price {
+color: #263238;
+font-size: 24px;
 }
 
-.instagram-container:hover .instagram-image{
-    opacity: 0.3;
+.card-title {
+color:#263238
 }
 
-.instagram-container:hover .instagram-image-middle{
-    opacity: 1;
+.sale {
+color: #E53935
 }
 
-.instagram-image-text{
-    background-color: gray;
-    color: white;
-    font-size: 16px;
-    padding: 16px 32px;
+.sale-badge {
+background-color: #E53935
 }
-
-/* 
-
-
- ul {  
-    position: fixed;
-    top 0;
-    width: 100%; 
-    list-style-type:none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #D4E2FF;
-}
-
-li {
-    float: left; 
-}
-
-li a, .dropbtn {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-h1 {
-    color:blue;
-    font-family: verdana;
-    font-size: 300%;
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
-
-li.dropdown {
-    display:inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position:absolute;
-    background-color: #677BA3;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color:black;
-    padding: 12px 16px;
-    text-decoration:none;
-    display: block;
-    text-align:left;
-}
-
-.dropdown-content a:hover {background-color:#677BA3;}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-li a:hover {
-    background-color: #AFC5F0
-}
-
-ul li.right {float:right;}
-
-@media screen and (max-width:600px) {
-    ul li.right,
-    ul li {float:none;}
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
- */
