--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,24 +1,62 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-
 {% block title %}
 <title>Products Page</title>
 {% endblock title %}
 
-
 {% block content %} 
 
 <h1>Products Page</h1>
-<p>Here is the list of prodcts</p>
 
-{% for product_item in all_products %}
-  {{ product_item.name }}
-  {{ product_item.price }}
-  {{ product_item.description }}
-  <img src="http://127.0.0.1:8000/media/product_images/Test_IMG009.png" alt="">
-  {{product_item.image.url}}
-{% endfor %}
+ <!--Main layout-->
+ <main>
+    <div class="container">     
+    <!-- Products -->
+      <section>
+      <div class="text-center">
+        <div class="row">
+    {% for product_item in all_products %}
+          <div class="col-lg-3 col-md-6 mb-4" >
+            <div class="card" style="width: 100%; height:400px;" >
+              <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
+                data-mdb-ripple-color="light">
+                <img src="{{product_item.image.url}}"
+                  class="w-100" />
+                <a href="#!">
+                  <div class="mask">
+                    <div class="d-flex justify-content-start align-items-end h-100">
+                      <h5><span class="badge bg-dark ms-2">NEW</span></h5>
+                    </div>
+                  </div>
+                  <div class="hover-overlay">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                  </div>
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="" class="text-reset">
+                  <h5 class="card-title mb-2"> {{ product_item.name }}</h5>
+                </a>
+                <a href="" class="text-reset ">
+                  <p>{{ product_item.description }}</p>
+                </a>
+                <h6 class="mb-3 price"> ${{ product_item.price }}</h6>
+              </div>
+            </div>
+          </div>
+    {% endfor %}
+          
+        </div>
+
+        </div> 
+      </div>
+    </section>
+      
+
+    </div>
+    </main>
+     <!--Main layout-->
 
 
 {% endblock content %}
