--- a/templates/main_page/main_page.html
+++ b/templates/main_page/main_page.html
@@ -19,22 +19,25 @@
             aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active" >
-            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100" style="width: 100%; height:500px;" alt="...">
+        <div class="carousel-item active">
+            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
+                style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
         </div>
-        <div class="carousel-item" >
-            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100" style="width: 100%; height:500px;" alt="...">
+        <div class="carousel-item">
+            <img src="{% static 'imgs/test_imgs/Test_IMG002_necklace.png' %}" class="img-fluid d-block w-100"
+                style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
-        <div class="carousel-item" >
-            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 " style="width: 100%; height:500px;" alt="...">
+        <div class="carousel-item">
+            <img src="{% static 'imgs/test_imgs/Test_IMG003_ring.png' %}" class="img-fluid d-block w-100 "
+                style="width: 100%; height:500px;" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -56,7 +59,8 @@
 <section>
     <div class="card-group">
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG004.png' %}" class="card-img-top"
+                style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">New Arrivals</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -64,7 +68,8 @@
             </div>
         </div>
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG005.png' %}" class="card-img-top"
+                style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Best Sellers</h5>
                 <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
@@ -72,7 +77,8 @@
             </div>
         </div>
         <div class="card h-200">
-            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top" style="width: 100%; height:400px;" alt="...">
+            <img src="{% static 'imgs/test_imgs/Test_IMG006.png' %}" class="card-img-top"
+                style="width: 100%; height:400px;" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Full Collection</h5>
                 <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
@@ -84,109 +90,160 @@
 
 <!-- END Clickable PIC Links -->
 <section>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col" style="background-color: rgb(0, 255, 13)">Word Panel</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col" style="background-color: rgb(0, 255, 13)">
+                simple Elegant jewelry For Everyday Style
+
+                Rebecca Haas Jewelry is designed with a focus on clean lines and simple beauty. Each piece is carefully
+                handcrafted to create lightweight, effortless sophistication.
+
+                Ethically handmade to order in Vermont.
+            </div>
+        </div>
     </div>
-</div>
 </section>
 
 <!-- BEGIN PRODUCT SELECTION OPTIONS -->
 <section>
-<div>
-    <h1>OUR PRODUCTS</h1>
-</div>
+    <div>
+        <h1>OUR PRODUCTS</h1>
+    </div>
 
 
-<div class="container">
-    <div class="row">
-        <div class="card-group">
-            <div class="col">
-                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG007.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
-                    <div class="card">
-                        <button class="btn btn-secondary" type="submit">Button</button>
-                    </div> 
+    <div class="container">
+        <div class="row">
+            <div class="card-group">
+                <div class="col">
+                    <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                        <img src="{% static 'imgs/test_imgs/Test_IMG007.png' %}" class="card-img"
+                            style="width: 100%; height:200px;" alt="...">
+                        <div class="card">
+                            <button class="btn btn-secondary" type="submit">Button</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG008.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
-                    <div class="card">
-                        <button class="btn btn-secondary" type="submit">Button</button>
-                    </div>   
+                <div class="col">
+                    <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                        <img src="{% static 'imgs/test_imgs/Test_IMG008.png' %}" class="card-img"
+                            style="width: 100%; height:200px;" alt="...">
+                        <div class="card">
+                            <button class="btn btn-secondary" type="submit">Button</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG009.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
-                    <div class="card">
-                        <button class="btn btn-secondary" type="submit">Button</button>
-                    </div> 
+                <div class="col">
+                    <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                        <img src="{% static 'imgs/test_imgs/Test_IMG009.png' %}" class="card-img"
+                            style="width: 100%; height:200px;" alt="...">
+                        <div class="card">
+                            <button class="btn btn-secondary" type="submit">Button</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG010.png' %}" class="card-img" style="width: 100%; height:200px;" alt="...">
-                    <div class="card">
-                        <button class="btn btn-secondary" type="submit">Button</button>
-                    </div> 
+                <div class="col">
+                    <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                        <img src="{% static 'imgs/test_imgs/Test_IMG010.png' %}" class="card-img"
+                            style="width: 100%; height:200px;" alt="...">
+                        <div class="card">
+                            <button class="btn btn-secondary" type="submit">Button</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
-                    <img src="{% static 'imgs/test_imgs/Test_IMG011.png' %}" class="card-img " style="width: 100%; height:200px;" alt="...">
-                    <div class="card">
-                        <button class="btn btn-secondary" type="submit">Button</button>
-                    </div> 
+                <div class="col">
+                    <div class="card bg-light text-black h-200 " style="max-width: 18rem;">
+                        <img src="{% static 'imgs/test_imgs/Test_IMG011.png' %}" class="card-img "
+                            style="width: 100%; height:200px;" alt="...">
+                        <div class="card">
+                            <button class="btn btn-secondary" type="submit">Button</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
-</div>
 </section>
 <!-- END PRODUCT SELECTION OPTIONS -->
 
 
+<!-- BEGIN SECTION LAYOUT -->
+<section>
+    <div class="d-flex ">
+        <div class="p-2 flex-shrink-1" style="background-color:pink">
+            <div>
+                <div class = "align-content-center">
+                    <h1>Designs Inspired by Nature</h1>
+                    <button class="btn btn-secondary" type="submit">View All</button>
+                </div>
+            </div>
+        </div>
+        <div class="p-2 w-100 ">
+            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
+                style="width: 100%; height:250px;" alt="...">
+        </div>
+
+    </div>
+    <div class="d-flex flex-row-reverse">
+        <div class="p-2 flex-shrink-1" style="background-color:pink">
+            <div>
+                <div class = "align-content-center">
+                    <h1>Designs Inspired by Nature</h1>
+                    <button class="btn btn-secondary" type="submit">View All</button>
+                </div>
+            </div>
+        </div>
+        <div class="p-2 w-100 ">
+            <img src="{% static 'imgs/test_imgs/Test_IMG001_eardrop-earrings.png' %}" class="img-fluid d-block w-100"
+                style="width: 100%; height:250px;" alt="...">
+        </div>
+
+    </div>
+</section>
+<!-- END SECTION LAYOUT -->
+
 <!-- BEGIN INSTAGRAM PANEL -->
 <section>
-<div>
-    <h1>Instagram</h1>
-</div>
-
-
-<div class="card-group">
-    <div class="card">
-        <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:15px;  padding:1px; " alt="...">
-      
+    <div>
+        <h1>Instagram</h1>
     </div>
-    <div class="card">
-        <img src="{% static 'imgs/test_imgs/Test_IMG013.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
-      
+
+
+    <div class="card-group">
+        <div class="card">
+            <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  "
+                style=" width: 100%; height:300px; border-radius:15px;  padding:1px; " alt="...">
+
+        </div>
+        <div class="card">
+            <img src="{% static 'imgs/test_imgs/Test_IMG013.png' %}" class="img-fluid  "
+                style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+
+        </div>
+        <div class="card">
+            <img src="{% static 'imgs/test_imgs/Test_IMG014.png' %}" class="img-fluid  "
+                style=" width: 100%; height:300px; border-radius:20px;  padding:px;" alt="...">
+
+
+        </div>
+        <div class="card">
+            <img src="{% static 'imgs/test_imgs/Test_IMG015.png' %}" class="img-fluid  "
+                style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
+
+        </div>
     </div>
-    <div class="card">
-        <img src="{% static 'imgs/test_imgs/Test_IMG014.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:px;" alt="...">
-
-      
-    </div>
-    <div class="card">
-        <img src="{% static 'imgs/test_imgs/Test_IMG015.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:20px;  padding:1px;" alt="...">
-      
-    </div>
-  </div>
 
 
 
-<div class="card-group">
+    <div class="card-group">
 
 </section>
 
- <!-- END INSTAGRAM PANEL -->
+<!-- END INSTAGRAM PANEL -->
 
 
 
