--- a/templates/products/productDetails.html
+++ b/templates/products/productDetails.html
@@ -14,7 +14,7 @@
         <div class="row">
             <!--Grid column-->
             <div class="col-md-6 mb-4">
-                <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  " style=" width: 100%; height:300px; border-radius:15px;  padding:1px; " alt="...">
+                <img src="{% static 'imgs/test_imgs/Test_IMG012.png' %}" class="img-fluid  " style=" width: 300px; height:300px; border-radius:15px;  padding:1px; " alt="...">
             </div>
             <!--Grid column-->
 
